--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "cors": "^2.8.5",
         "cryptr": "^6.0.3",
         "express": "^4.17.1",
-        "mongodb": "^3.7.3"
+        "mongodb": "^3.7.3",
+        "socket.io": "^4.5.4"
     },
     "devDependencies": {
         "@types/mongodb": "^4.0.7",
